# Weather-Analyzer---API-Based-Application

./: .editorconfig  .env.example  .gitignore  README.md  TODO.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: deploy.yml
src/: App.jsx  styles.css
tests/: test_api.py  test_insights.py  test_storage.py  test_suggestions.py
weather_analyzer/: __init__.py  api.py  cli.py  config.py  insights.py  models.py  storage.py  suggestions.py  web.py
