[project]
name = "weather-analyzer"
version = "0.3.0"
description = "Weather dashboard backend with OpenWeather integration and local search history."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
weather-analyzer = "weather_analyzer.web:main"
weather-analyzer-cli = "weather_analyzer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
